--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.android.support:support-v13:21.0.2'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
 }
