--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '21.0.0'
+    buildToolsVersion '21.1.1'
 
     defaultConfig {
         applicationId "com.androidapp.yuki.test_butter"
@@ -25,4 +25,8 @@ dependencies {
     compile 'com.android.support:support-v13:21.0.2'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile files('libs/gson-2.2.2.jar')
+    compile files('libs/mobileservices-1.1.5-javadoc.jar')
+    compile files('libs/mobileservices-1.1.5-sources.jar')
+    compile files('libs/mobileservices-1.1.5.jar')
 }
