--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidapp.yuki.test_butter">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,11 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.androidapp.yuki.test_butter.FriendActvity"
             android:label="@string/app_name">
-
         </activity>
+        <activity
+            android:name=".FriendsMessageActivity"
+            android:label="@string/app_name"></activity>
     </application>
 </manifest>
