--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,10 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.android.support:support-v13:21.0.2'
-    compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile files('libs/gson-2.2.2.jar')
     compile files('libs/mobileservices-1.1.5-javadoc.jar')
     compile files('libs/mobileservices-1.1.5-sources.jar')
     compile files('libs/mobileservices-1.1.5.jar')
+    compile 'com.android.support:gridlayout-v7:21.0.2'
 }
